# fastvect

./: .gitignore  Cargo.toml  LICENSE.md  README.md  fastvect.pyi  pyproject.toml
.github/workflows/: pypi.yaml  pypi.yml
src/: lib.rs
src/bindings/: mod.rs  payload.rs  storage.rs
src/core/: distance.rs  filter.rs  mod.rs  quantization.rs  simd.rs  vector.rs
src/index/: exact.rs  hnsw.rs  mod.rs
src/storage/: mod.rs  segment.rs
tests/python/: benchmark_stress.py  test_integration.py
tests/rust/: main.rs  test_distance.rs  test_hnsw.rs  test_simd.rs  test_storage.rs
