[package]
name = "fastvect"
version = "0.1.0"
edition = "2024"

[lib]
name = "fastvect"
crate-type = ["cdylib", "rlib"]

[dependencies]
postcard = { version = "1.1.3", features = ["alloc"] }
pyo3 = "0.29.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }

[[test]]
name = "rust_tests"
path = "tests/rust/main.rs"
