[package]
name = "fastvect"
version = "1.0.0"
edition = "2024"
license = "MIT"

[lib]
name = "fastvect"
crate-type = ["cdylib", "rlib"]

[dependencies]
postcard = { version = "1.1.3", features = ["alloc"] }
pyo3 = "0.29.0"
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }

[[test]]
name = "rust_tests"
path = "tests/rust/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
