[package]
name = "fastvect"
version = "1.0.1"
edition = "2024"
license = "MIT"

[lib]
name = "fastvect"
crate-type = ["cdylib", "rlib"]

[dependencies]
parking_lot = "0.12.5"
postcard = { version = "1.1.3", features = ["alloc"] }
pyo3 = "0.29.0"
rand = "0.10.1"
rayon = "1.12.0"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }

[[test]]
name = "rust_tests"
path = "tests/rust/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
