[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fastvect"
version = "0.1.0"
description = "Embedded, ultra-fast vector database with HNSW indexing built in Rust."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
